--- a/resources/prototypes/index.page
+++ b/resources/prototypes/index.page
@@ -1,10 +1,10 @@
-::xowiki::Page new -title "XoWf Test Index Page" -text {
+::xowiki::Page new -title "Storyboard Editor" -text {
 
 <p>
 This is the start page of xowfstoryboard index.</p>
 
 <p>
-Monaco forms defined in this package:
+Storyboards defined in this package:
 </p>
 
  {{form-usages -field_names _name -form en:monaco.form -parent_id * -csv false -with_form_link false}}
