--- a/resources/prototypes/index.page
+++ b/resources/prototypes/index.page
@@ -1,13 +1,23 @@
 ::xowiki::Page new -title "Storyboard Editor" -text {
 
 <p>
-This is the start page of xowfstoryboard index.</p>
+This is the start page of xowfstoryboard.</p>
+
+<center>
+<p>
+<a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new" role="button" style="color: white; text-decoration: none;">Start Here</a>
+</p>
+</center>
+
+<hr>
 
 <p>
 Storyboards defined in this package:
 </p>
 
- {{form-usages -field_names _name -form en:monaco.form -parent_id * -csv false -with_form_link false}}
+ {{form-usages -field_names _name -form en:storyboard.wf -parent_id * -csv false -with_form_link false}}
+
+<hr>
 
 <p>Activity Overview:</p>
 
