accept parameter for workflow instance
a) use a workflow with query parameter
query parameter: p.wf_notation
- natural-language
- key-value

b) use a form-field
form-field parameter: notation
- natural-language
- key-value

--- a/resources/prototypes/index.page
+++ b/resources/prototypes/index.page
@@ -5,7 +5,8 @@ This is the start page of xowfstoryboard.</p>
 
 <center>
 <p>
-<a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new" role="button" style="color: white; text-decoration: none;">Start Here</a>
+<a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=key-value" role="button" style="color: white; text-decoration: none;">Key-Value</a> <a class="btn btn-primary btn-lg" href="storyboard.wf?nls_language=en_US&m=create-new&p.wf_notation=natural-language" role="button" style="color: white; text-decoration: none;">Natural-Language</a>
+
 </p>
 </center>
 
