setup helper for experiment
introduced a helpers formfield
which can host richtext/html

current approach is to feed this formfield
with html from xowfstoryboard-procs
--> this needs to be refactored to incorporate ::xowiki::Page
--> currently hard coded
show buttons which open modal code reference

--- a/www/prototypes/storyboard.form.page
+++ b/www/prototypes/storyboard.form.page
@@ -3,11 +3,15 @@
     -title "Storyboard Form" \
     -set anon_instances t \
     -set form {<form>
+		<div class="top-wrapper">
 		<div class="sb-instruction">@instruction@</div>
+		<div class="sb-helpers">@helpers@</div>
+		</div>
 		<div class="sb-editor">@editor@</div>
 		</form>} \
     -set text {
 		@instruction@
+		@helpers@
 		@editor@} \
     -set form_constraints {
 		_name:hidden
