--- a/www/resources/storyboard.css
+++ b/www/resources/storyboard.css
@@ -1,27 +1,59 @@
+div.top-wrapper {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid black; */
+  overflow: hidden; /* add this to contain floated children */
+  margin: 10px;
+}
+
+div.sb-instruction{
+  width: 600px;
+  border: 1px solid grey;
+  float: left;
+  padding: 5px;
+  margin: 1px;
+}
+
+div.sb-helpers {
+  width: 350px;
+  float: left;
+  margin: 1px;
+  margin-left: 5px;
+  border: 1px solid grey;
+  padding: 5px;
+}
+
+div.sb-editor {
+  display: flex;
+  justify-content: center;
+}
+
 div.storyboardContainer {
-	overflow: hidden;
-	display: inline-block;
+  overflow: hidden;
+  display: inline-block;
 }
 
 div.storyboardEditor {
-	float: left;
-	margin: 1px;
-	display: inline-block;
+  float: left;
+  margin: 1px;
+  display: inline-block;
 }
 
 div.storyboardPreview {
-	border: 1px solid grey;
-	height: 600px;
-	width: 525px;
-	display: inline-block;
-	margin: 1px;
-	overflow-y: auto;
+  border: 1px solid grey;
+  height: 500px;
+  width: 350px;
+  display: inline-block;
+  margin: 1px;
+  margin-left: 5px;
+  overflow-y: auto;
+  padding: 5px;
 }
 
 div.storyboardLog {
-	border: 1px solid grey;
-	float: left;
-	width: 100%;
-	margin: 1px;
-	display: inline-block;
+  border: 1px solid grey;
+  float: left;
+  width: 100%;
+  margin: 1px;
+  display: inline-block;
 }
