refactor: htmlPreview as own form field
previously:
the htmlPreview was added inside
the form field monaco_storyboard (editor)
it was added via html next to the editor

now refactored:
htmlPreview is now set via its own form field
as disabled rich text. it is written to via
the workflow object property htmlPreview

TODO:
- make more responsive for very small screen (low prio)
- refactor so this also works without a workflow (hard)

--- a/www/prototypes/storyboard.form.page
+++ b/www/prototypes/storyboard.form.page
@@ -4,15 +4,19 @@
     -set anon_instances t \
     -set form {<form>
 		<div class="top-wrapper">
-		<div class="sb-instruction">@instruction@</div>
-		<div class="sb-helpers">@helpers@</div>
+			<div class="sb-instruction">@instruction@</div>
+			<div class="sb-helpers">@helpers@</div>
 		</div>
-		<div class="sb-editor">@editor@</div>
+		<div class="main-wrapper">
+			<div class="sb-editor">@editor@</div>
+			<div class="sb-preview">@htmlPreview@</div>
+		</div>
 		</form>} \
     -set text {
 		@instruction@
 		@helpers@
-		@editor@} \
+		@editor@
+		@htmlPreview@} \
     -set form_constraints {
 		_name:hidden
 		_page_order:hidden
