--- a/www/resources/storyboard.css
+++ b/www/resources/storyboard.css
@@ -6,26 +6,49 @@ div.top-wrapper {
   margin: 10px;
 }
 
-div.sb-instruction{
-  width: 600px;
+div.main-wrapper {
+  display: flex;
+  justify-content: center;
+  /* border: 1px solid black; */
+  overflow: hidden; /* add this to contain floated children */
+  margin: 10px;
+}
+
+div.sb-instruction {
+  height: 200px;
+  width: 61em;
   border: 1px solid grey;
   float: left;
   padding: 5px;
   margin: 1px;
+  overflow-y: auto;
 }
 
 div.sb-helpers {
-  width: 350px;
-  float: left;
-  margin: 1px;
-  margin-left: 5px;
+  width: 30em;
   border: 1px solid grey;
+  float: left;
   padding: 5px;
+  margin: 1px;
+  margin-left: 10px;
 }
 
 div.sb-editor {
-  display: flex;
-  justify-content: center;
+  border: 1px solid grey;
+  float: left;
+  padding: 5px;
+  margin: 1px;
+}
+
+div.sb-preview {
+  width: 30em;
+  height: 50em;
+  border: 1px solid grey;
+  float: left;
+  padding: 5px;
+  margin: 1px;
+  margin-left: 10px;
+  overflow-y: auto;
 }
 
 div.storyboardContainer {
