--- a/www/prototypes/experiment_summary.form.page
+++ b/www/prototypes/experiment_summary.form.page
@@ -4,13 +4,9 @@
     -set anon_instances t \
     -set form {@experiment_id@
 				@time_elapsed@} \
-	-set text {<center>
-<p>Thank you!</p>
-<p>Please transfer the following elements to your limesurvey</p>
-<p>Experiment ID: @experiment_id@</br>
-Time elapsed: @time_elapsed@</p>
-<p>Editor @editor@</p>
-</center>} \
+	-set text {
+{{xowfstoryboard_includelet}}
+} \
     -set form_constraints {
 				_name:hidden
                 _page_order:hidden
