--- a/www/prototypes/reference_kv_question.page
+++ b/www/prototypes/reference_kv_question.page
@@ -9,7 +9,9 @@
 <p><b>question</b><i>?identifier? key value</i></p>
 
 <p><u>Description:</u></p>
-<p>This command uses the provided <i>identifier</i> to set an id for the question object in order to reference it (e.g.: question1, questionTopic01). If no <i>identifier</i> is provided, future video objects will be overwritten. The keys title, question and feedback are receive simple text input. Answers are set via the answer key in the form of a list where each list item consists of the structure "Answer text", correct|wrong.</p>
+<p>Creates a question element based on key-value pairs. The provided <i>identifier</i> is used together with the command name as an id for the element in order to reference it (e.g.: question1, questionTopic01). If no <i>identifier</i> is provided, future elements will be overwritten.</p>
+
+<p>The keys title, question and feedback receive simple text input. Answers are set via the answer key in the form of a list where each list item consists of the structure "Answer text", correct|wrong.</p>
 
 <p>Valid keys are:</p>
 
@@ -22,8 +24,8 @@
 <p><u>Question Example:</u></p>
 <p>question1 title "What is an information system?"<br>
 question1 type singleChoice<br>
-question1 question "Please explain the concept of an information system."<br>
-question1 answers ("Answer 1", wrong, "Answer 2", correct, "Answer 3", correct)<br>
-question1 feedback "General feedback on this question"</p>
+question1 question "Select the answer which is an information system."<br>
+question1 answers ("External Harddrive", wrong, "HTML", wrong, "Content Management System", correct)<br>
+question1 feedback "External harddrive and HTML can be components of an information system."</p>
 } \
 	-description {Question}
