--- a/www/prototypes/reference_kv_textpage.page
+++ b/www/prototypes/reference_kv_textpage.page
@@ -3,16 +3,18 @@
 	-title "Textpage Command Reference (KV)" \
 	-text {
 <p><u>Name:</u></p>
-<p>textpage - Create a textpage</p>
+<p>textpage - Create a paragraph of text with a title</p>
 
 <p><u>Synopsis:</u></p>
 <p><b>textpage</b><i>?identifier? key value</i></p>
 
 <p><u>Description:</u></p>
-<p>Creates a textpage based on key-value pairs. Valid keys are:</p>
+<p>Creates a textpage based on key-value pairs. The provided <i>identifier</i> is used together with the command name as an id for the element in order to reference it (e.g.: textpage1, textpageWelcomeMessage). If no <i>identifier</i> is provided, future elements will be overwritten.</p>
+
+<p>Valid keys are:</p>
 
 <p><b>textpage</b><i>?identifier?</i> <b>title</b> title_of_paragraph<br>
-<b>textpage</b><i>?identifier?</i> <b>body</b> paragraph_text<br>
+<b>textpage</b><i>?identifier?</i> <b>body</b> paragraph_text</p>
 
 <p><u>Textpage Example:</u></p>
 <p>textpage1 title "Introduction" <br>textpage1 body "This is some example text for a paragraph"</p>
