--- a/www/prototypes/reference_kv_video.page
+++ b/www/prototypes/reference_kv_video.page
@@ -9,9 +9,9 @@
 <p><b>video</b><i>?identifier? key value</i></p>
 
 <p><u>Description:</u></p>
-<p>This command uses the provided <i>identifier</i> to set an id for the video object in order to reference it (e.g.: video1, videoSession01). If no <i>identifier</i> is provided, future video objects will be overwritten. The URL needs to be an embeddable URL. Timestamps are added as comma separated lists in brackets (e.g. (ts01, ts02, ts03, ts04))</p>
+<p>Creates a video element based on key-value pairs. The provided <i>identifier</i> is used together with the command name as an id for the element in order to reference it (e.g.: video1, videoSession01). If no <i>identifier</i> is provided, future elements will be overwritten. The URL needs to be an embeddable URL. Timestamps are added as comma separated lists in brackets (e.g. (timestamp01, timestamp02, timestamp03, timestamp04))</p>
 
-<p>Valid keys are:</p>
+<p> Valid keys are:</p>
 
 <p><b>video</b><i>?identifier?</i> <b>URL</b> embeddable_url_of_video<br>
 <b>video</b><i>?identifier?</i> <b>timestamp</b> (timestamp_id ?, timestamp_id?)</p>
