--- a/www/prototypes/treatmenttest2.page
+++ b/www/prototypes/treatmenttest2.page
@@ -3,16 +3,16 @@
 	-title "Treatment Test 2" \
 	-text {
 <p>
-You have the following video link at hand to create a video-based learning module.<bri><br>
+You have the following video link at hand to create a video-based learning module.<br><br>
 
 Video link: https://www.youtube.com/embed/0siisFJUKh4<br><br>
 
 Task 1: Define timestamps within this video for better navigation. There are two timestamps, namely:
 
-<li>
-<ul>The first timestamp starts at 120 seconds and is titled "Explanation of Concept"</ul>
-<ul>The second timestamp starts at 201 seconds and is titled "Overview of core components"</ul>
-</li>
+<ul>
+<li>The first timestamp starts at 120 seconds and is titled "Explanation of Concept"</li>
+<li>The second timestamp starts at 201 seconds and is titled "Overview of core components"</li>
+</ul>
 
 Create a text page with a title "Explainer Video: Hash Values" and with a paragraph of text containing the following: "Welcome to this video-based learning module. Please start with the question."<br><br>
 
