use jscrollpane to show scrollbar
- scrollbar visualizations differ in browser and OS
- the introduction field needs to explicitly show scrolling ability
- accomplished with jscrollpane

codepen: https://codepen.io/michaelfeurstein/pen/XWzPWxN

--- a/www/resources/storyboard.css
+++ b/www/resources/storyboard.css
@@ -25,7 +25,30 @@ div.sb-instruction {
   float: left;
   padding: 5px;
   margin: 1px;
-  overflow-y: auto;
+  overflow-y: scroll;
+}
+
+div.sb-instruction-text {
+  padding: 10px;
+}
+
+label.instruction {
+  padding-top: 5px;
+  padding-left: 5px;
+}
+
+/* stylying jScrollPane */
+.jspTrack {
+  background-color: lightgrey;
+}
+
+.jspDrag {
+  border-radius: 0px;
+  background-color: #008198;
+}
+
+.jspVerticalBar {
+  background: none;
 }
 
 div.sb-helpers {
