--- a/www/prototypes/reference_kv_timestamp.page
+++ b/www/prototypes/reference_kv_timestamp.page
@@ -1,23 +1,23 @@
 ::xowiki::Page new \
 	-set name en:reference_kv_timestamp.page \
-	-title "Timestamp Command Reference (KV)" \
+	-title "Timestamp Command Reference" \
 	-text {
 <p><u>Name:</u></p>
-<p>timestamp - Create a timestamp for a video</p>
+<p>timestamp - Create a timestamp for a vide0</p>
 
 <p><u>Synopsis:</u></p>
-<p><b>timestamp</b><i>?identifier? key value</i></p>
+<p><b>timestamp</b> <i>identifier</i> key <i>value</i></p>
 
 <p><u>Description:</u></p>
-<p>Creates a timestamp element based on key-value pairs. The provided <i>identifier</i> is used together with the command name as an id for the element in order to reference it (e.g.: timestamp1, timestampIntro). If no <i>identifier</i> is provided, future elements will be overwritten.</p>
+<p>Creates a timestamp element based on key-value pairs. The provided <i>identifier</i> is used as an id for the element in order to reference it (e.g.: ts01, intro). A timestamp has a title and accepts time as input in seconds. One can directly assign the timestamp to a video.</p>
 
 <p>Valid keys are:</p>
 
-<p><b>timestamp</b><i>?identifier?</i> <b>title</b> title_of_timestamp<br>
-<b>timestamp</b><i>?identifier?</i> <b>time</b> time_in_seconds<br>
-<b>timestamp</b><i>?identifier?</i> <b>video</b> video_reference_id</p>
+<p><b>timestamp</b> <i>identifier</i> <b>title</b> title_of_timestamp<br>
+<b>timestamp</b> <i>identifier</i> <b>time</b> time_in_seconds<br>
+<b>timestamp</b> <i>identifier</i> <b>video</b> video_reference_id</p>
 
 <p><u>Timestamp Example:</u></p>
-<p>timestampIntro title "Introduction" <br>timestampIntro time 63</p>
+<code class="example">timestamp ts01 title "Example Timestamp" <br>timestamp ts01 time 63<br>timestamp ts01 video myVideo</code>
 } \
 	-description {Timestamp}
