--- a/www/prototypes/reference_kv_module.page
+++ b/www/prototypes/reference_kv_module.page
@@ -1,22 +1,22 @@
 ::xowiki::Page new \
 	-set name en:reference_kv_module.page \
-	-title "Module Command Reference (KV)" \
+	-title "Module Command Reference" \
 	-text {
 <p><u>Name:</u></p>
-<p>module - Create a module</p>
+<p>module - Create a module with a title and structure</p>
 
 <p><u>Synopsis:</u></p>
 <p><b>module</b> <i>key value</i></p>
 
 <p><u>Description:</u></p>
-<p>Creates a module based on key-value pairs. No <i>identifier</i> is needed. There is only one module. A module has a title and a structure containing a comma separated list of elements, referenced via their id (e.g. (textpageIntro, question1, video1, textpage2)).</p>
+<p>Creates a module based on key-value pairs. Note that no <i>identifier</i> is needed. A module has a <b>title</b> and a </b>structure</b> containing a comma separated list of elements, referenced via their id (e.g. (textpageIntro, question1, v1, intro)).</p>
 
 <p>Valid keys are:</p>
 
 <p><b>module</b> <b>title</b> title_of_module<br>
-<b>module</b> <b>structure</b> (element ?, element, ...?)<br>
+<b>module</b> <b>structure</b> (?element1, element2, ... elementN?)<br>
 
 <p><u>Module Example:</u></p>
-<p>module title "Learning Module" <br>module structure (video, textpage, question)</p>
+<code class="example">module title "Learning Module" <br>module structure (myVideo, myPage, question1, question2)</code>
 } \
 	-description {Module}
