introduction of autosave
monaco editor autosave integration
- autosave after 2 seconds of idle time
- autosave and validate storyboard
- persist info of first working storyboard
- manual button click save is aware of autosave

--- a/www/resources/experiment.css
+++ b/www/resources/experiment.css
@@ -118,3 +118,21 @@ code.example {
   color: black;
   border-radius: 4px;
 }
+
+.autosave {
+  width: 800px;
+}
+
+.pending  {
+  float: left !important;
+  position: relative;
+  left: 753px;
+  bottom: 2px;
+}
+
+.saved {
+  float: left !important;
+  position: relative;
+  left: 718px;
+  bottom: 2px;
+}
