--- a/www/resources/experiment.css
+++ b/www/resources/experiment.css
@@ -35,10 +35,23 @@ body{
   max-width: 600px;
 }
 
+span.tip {
+  float: right;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.1;
+  color: #000;
+  text-shadow: 0 1px 0 #fff;
+  filter: alpha(opacity=20);
+  opacity: .5;
+  right: 28px;
+}
+
 .close {
   position: absolute;
   bottom: 8px;
   right: 10px;
+  opacity: .5 !important;
 }
 
 .ref-header.popover-title {
