--- a/www/resources/experiment.css
+++ b/www/resources/experiment.css
@@ -57,7 +57,7 @@ span.tip {
 .ref-header.popover-title {
   position: absolute;
   top: -10px;
-  width: 596px;
+  width: 100%;
   background-color: lightgray;
   border-bottom: 2px solid #3cafc3;
 }
